<resources>
    <string name="app_name">otto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OTTO.a.b</string>
    <string name="nav_header_subtitle">kalle@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_jobs">Jobs</string>
    <string name="menu_billing">Billing</string>
    <string name="menu_employees">Employees</string>
    <string name="tab_offers">Offers</string>
    <string name="tab_orders">Orders</string>
    <string name="tab_assignments">Assignments</string>
    <string name="tab_jobs">Jobs</string>
</resources>
