<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_jobs" />
        <item
            android:id="@+id/nav_billing"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_billing" />
        <item
            android:id="@+id/nav_employees"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_employees" />
    </group>

</menu>
